--- a/Testicd/Testicd/Testicd.vcxproj
+++ b/Testicd/Testicd/Testicd.vcxproj
@@ -66,6 +66,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="essai.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="Testicd.cpp" />
     <ClCompile Include="ZamDA.cpp" />
