--- a/Zam61850/libzamio/libzamio.vcxproj
+++ b/Zam61850/libzamio/libzamio.vcxproj
@@ -30,7 +30,7 @@
     <ToolchainID>com.visualgdb.raspberry_pi</ToolchainID>
     <ToolchainVersion>8.3.0/8.2.1/r3</ToolchainVersion>
     <GNUTargetType>DynamicLibrary</GNUTargetType>
-    <ExplicitSysroot>E:\SysGCC\buster\arm-linux-gnueabihf\sysroot</ExplicitSysroot>
+    <ExplicitSysroot>E:\SysGCC\bookworm\arm-linux-gnueabihf\sysroot</ExplicitSysroot>
     <PreserveSubdirectoriesForObjectFiles>false</PreserveSubdirectoriesForObjectFiles>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
