--- a/Zam61850/libzam/libzam.vcxproj
+++ b/Zam61850/libzam/libzam.vcxproj
@@ -42,11 +42,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|VisualGDB'">
     <GNUConfigurationType>Debug</GNUConfigurationType>
     <ToolchainID>com.visualgdb.raspberry_pi</ToolchainID>
-    <ToolchainVersion>8.3.0/8.2.1/r3</ToolchainVersion>
+    <ToolchainVersion>12.2.0/13.1/r1</ToolchainVersion>
     <GNUTargetType>DynamicLibrary</GNUTargetType>
     <RemoteBuildHost>
     </RemoteBuildHost>
-    <ExplicitSysroot>E:\SysGCC\buster\arm-linux-gnueabihf\sysroot</ExplicitSysroot>
+    <ExplicitSysroot>E:\SysGCC\bookworm\arm-linux-gnueabihf\sysroot</ExplicitSysroot>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <GNUConfigurationType>Debug</GNUConfigurationType>
