--- a/Testicd/Testicd/Testicd.vcxproj.filters
+++ b/Testicd/Testicd/Testicd.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClCompile Include="test.cpp">
       <Filter>Source files</Filter>
     </ClCompile>
+    <ClCompile Include="essai.cpp">
+      <Filter>Source files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Testicd-Debug.vgdbsettings">
